samples/_failures_safe/1761142930_ba435c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d94befa9.c: In function ‘main’:
./samples/SAFE/__tmp_d94befa9.c:163: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d94befa9.c:162:17: error: expected declaration or statement at end of input
  162 |                 if
      |                 ^~
./samples/SAFE/__tmp_d94befa9.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d94befa9.c:162:17: error: expected declaration or statement at end of input
